fixed bread image on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -217,8 +217,6 @@ nav img {
   width: 40%;
   float: right;
   margin: 4%;
-  border: 2px solid #3206a1;
-  border-radius: 4%;
 }
 
 
@@ -433,6 +431,14 @@ span.ham-line {
 .ingredients li {
   font-size: 14px;
 }
+
+.bread-holder img {
+  display: none;
+  float: none;
+  width: 90%;
+  text-align: center;
+}
+
 
 /*Peru Mobile Section*/
 
